# pg_gpu

./: .gitignore  .readthedocs.yaml  CLAUDE.md  IM_model_GPU_and_traditional.py  IM_model_MomentsLD_test.py  IM_model_postprocess.py  IM_model_traditional_LD.py  README.md  Snakefile  TODO_performance.md  check.ipynb  config.yaml  dev_notebook.ipynb  environment.yml  inspecting_results.ipynb  pixi.toml  pyproject.toml  validate_two_pop_ld.py
data/: demes_mod.yaml  im_pop.txt  simulate_im_vcf.py  simulate_vcf.py  test2.vcf
debug/: bench_3L_validate.py  bench_ehh_decay.py  bench_haplotype_count.py  bench_ihs_kernels.py  bench_local_pca_streaming.py  bench_pairwise_distance.py  bench_pca.py  bench_zns.py  bench_zns_ag1000g.py  profile_all_stats.py  stress_test_ag1000g.py  test_afs_shapes.py  test_diversity_debug.py  validate_missing_data.py  verify_missing_data_projection.py  windowed_comparison.py  windowed_simple_test.py
docs/: local_pca_streaming_plan.md  requirements.txt
examples/: IM_model_GPU_and_moments.py  accessibility_mask.py  admixture_detection.py  biobank_streaming_scan.py  final_performance_demo.py  genome_scan.py  ld_blocks.py  local_pca.py  moments_3pop_integration_demo.py  moments_integration_demo.py  multipop_ld_genotype_benchmark.py  pg_gpu_tour.ipynb  scikit_allel_comparison.py  sweep_tajimas_d_bootstrap.py  two_pop_ld_benchmark.py  vcf_to_zarr.py  windowed_benchmark.py
notebooks/: inspecting_results.ipynb
pg_gpu/: __init__.py  _biobank_warning.py  _gpu_genotype_prep.py  _memory_warning.py  _memutil.py  accessible.py  achaz.py  admixture.py  (+25 more)
(+9347 files in other folders)
