[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pg_gpu"
version = "0.1.0"
description = "GPU-accelerated population genetics statistics"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Andrew Kern", email = "adk@uoregon.edu" },
]

[project.urls]
Homepage = "https://github.com/andrewkern/pg_gpu"

[tool.pytest.ini_options]
pythonpath = [
    "pg_gpu"
]
